--- a/src/template.html
+++ b/src/template.html
@@ -16,14 +16,17 @@
     <div class="card">
       <div class="card-header">
         <h2>Manager</h2>
-      </div>
-      <ul class = "list-group">
-        <li class = "list-group-item">Name:</li>
-        <li class = "list-group-item">ID:</li>
-        <li class = "list-group-item">Email:</li>
-        <li class = "list-group-item">LinkedIn:</li>
-      </ul>
-    </div>
+        <div class="card">
+          <div class="card-header">
+            <h2>Manager</h2>
+          </div>
+            <ul class = "list-group">
+              <li class = "list-group-item">Name:</li>
+              <li class = "list-group-item">ID: ${manager.getId()}</li>
+              <li class = "list-group-item">Email: ${manager.getEmail()}</li>
+              <li class = "list-group-item">LinkedIn: ${manager.getLinkedIn()}</li>
+            </ul>
+          </div>
 
     <div class="card">
       <div class="card-header">
