--- a/src/template.html
+++ b/src/template.html
@@ -21,36 +21,36 @@
             <h2>Manager</h2>
           </div>
             <ul class = "list-group">
-              <li class = "list-group-item">Name:</li>
+              <li class = "list-group-item">Name: ${manager.getName()}</li>
               <li class = "list-group-item">ID: ${manager.getId()}</li>
               <li class = "list-group-item">Email: ${manager.getEmail()}</li>
               <li class = "list-group-item">LinkedIn: ${manager.getLinkedIn()}</li>
             </ul>
           </div>
 
-    <div class="card">
-      <div class="card-header">
-        <h2>Engineer</h2>
-      </div>
-      <ul class = "list-group">
-        <li class = "list-group-item">Name:</li>
-        <li class = "list-group-item">ID:</li>
-        <li class = "list-group-item">Email:</li>
-        <li class = "list-group-item">Github:</li>
-      </ul>
-    </div>
+          <div class="card">
+            <div class="card-header">
+              <h2>Engineer</h2>
+            </div>
+            <ul class = "list-group">
+              <li class = "list-group-item">Name: ${enineer.getName()}</li>
+              <li class = "list-group-item">ID: ${engineer.getId()}</li>
+              <li class = "list-group-item">Email: ${engineer.getEmail()}</li>
+              <li class = "list-group-item">Github: ${engineer.getGithub()}</li>
+            </ul>
+          </div>
 
-    <div class="card">
-      <div class="card-header">
-        <h2>Intern</h2>
-      </div>
-      <ul class = "list-group">
-        <li class = "list-group-item">Name:</li>
-        <li class = "list-group-item">ID:</li>
-        <li class = "list-group-item">Email:</li>
-        <li class = "list-group-item">School:</li>
-      </ul>
-    </div>
+          <div class="card">
+            <div class="card-header">
+              <h2>Intern</h2>
+            </div>
+            <ul class = "list-group">
+              <li class = "list-group-item">Name: ${intern.getName()}</li>
+              <li class = "list-group-item">ID: ${intern.getId()}</li>
+              <li class = "list-group-item">Email: ${intern.getEmail()}</li>
+              <li class = "list-group-item">School: ${intern.getSchool()}</li>
+            </ul>
+          </div>
 
   </main>
 </body>
