--- a/src/template.html
+++ b/src/template.html
@@ -51,7 +51,7 @@
               <li class = "list-group-item">School: ${intern.getSchool()}</li>
             </ul>
           </div>
-
   </main>
+  <!-- <script src="../index.js"></script> -->
 </body>
 </html>
