--- a/src/template.html
+++ b/src/template.html
@@ -52,6 +52,6 @@
             </ul>
           </div>
   </main>
-  <!-- <script src="../index.js"></script> -->
+  <script src="../index.js"></script>
 </body>
 </html>
